add switchlanguage fix css

--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -38,7 +38,7 @@
 
 	<div class="search-bar">
     	<span class="material-icons">search</span>
-    	<input type="text" class="search-input" placeholder="Search...">
+    	<input type="text" class="search-input" placeholder="Search">
 	</div>
 
 	<div class="show_category">
