--- a/flask/app/templates/stockmenu.html
+++ b/flask/app/templates/stockmenu.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../static/css/stockmenu.css">
 </head>
 
-<body class="">
+<body class="th">
     <script>
         const darkmode = localStorage.getItem('darkmode');
         if(darkmode === 'active') {
@@ -18,6 +18,7 @@
           document.body.classList.remove('darkmode');
         }
     </script>
+    <script src="../templates/js/language.js"></script>
     <div class="mainbox">
         <div class="reply-icon">
             <a href="{{ url_for('homepage') }}"> 
@@ -26,15 +27,15 @@
         </div>
         <div class="row">
             <span class="recName"></span>
-            <span>Stock Menu</span>
+            <span class="stock-menu">Stock Menu</span>
         </div>
         <div class="column">
            	<a type="button" class="nav-box" href="{{ url_for('category') }}">
-                <span>Category</span>
+                <span class="category">Category</span>
                 <img src="../static/ico/category.png" class="category-icon" >
             </a>
            	<a type="button" class="nav-box" href="{{ url_for('newitem') }}">
-                <span>New Item</span>
+                <span class="new-item">New Item</span>
             	<img src="../static/ico/addStock.png" class="addStock-icon">
             </a>
 		</div>
