--- a/flask/app/static/css/category.css
+++ b/flask/app/static/css/category.css
@@ -4,7 +4,7 @@
   /* --base--color: #fff; */
   --text--color: #000;
   --text2--color: #000;
-  --buttonbg--color: white;
+  --buttonbg--color: rgb(231, 231, 231);
   /* --buttonbg--color: linear-gradient(to top left, #7a7676 0%, #fff 30%, #fff 70%, #6b5f5f 100%); */
   --border--color: lightgray;
   --hover--color: gray;
@@ -13,9 +13,9 @@
 .darkmode{
   --basebg--color: #212121;
   --base--color: #282c40;
-  --text--color: #000;
-  --text2--color: #888;
-  --buttonbg--color: #dfdfdf;
+  --text--color: #888;
+  --text2--color: #aaa;
+  --buttonbg--color: #aaa;
   --border--color: gray;
   --hover--color: gray;
   --item-card--color: #444;
@@ -80,7 +80,7 @@ body {
 }
 
 .search-input::placeholder {
-  color: var(--text--color);
+  color: #000;
 }
 
 .show_category {
@@ -182,7 +182,7 @@ body {
 }
 
 .btn.edit {
-  background: #F3F4F6;
+  background: var(--buttonbg--color);
   color: #111827;
 }
 
