--- a/flask/app/static/css/adminlist.css
+++ b/flask/app/static/css/adminlist.css
@@ -258,6 +258,12 @@ input:checked + .slider:before {
   font-weight: bold;
 }
 
+.profile-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* ให้รูปครอบพอดี */
+}
+
 .profile-circle {
   align-items: center;
   background-color: var(--base--color);
@@ -269,4 +275,27 @@ input:checked + .slider:before {
   height: 3rem;
   justify-content: center;
   width: 3rem;
+}
+
+.modal {
+  display: none; /* เริ่มต้นซ่อน */
+  position: fixed;
+  z-index: 1000;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  justify-content: center;
+  align-items: center;
+}
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 400px;
+  text-align: center;
+}
+.modal-buttons button {
+  margin: 10px;
+  padding: 8px 16px;
+  cursor: pointer;
 }
