--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -16,9 +16,9 @@
         <div class="profile-wrapper">
             <div class="profile-circle">
                 {% if current_user.profile_pic %}
-                    <img src="{{ current_user.profile_pic }}"  class="profile-circle">
+                    <img src="{{ current_user.profile_pic }}"  class="profile-img">
                 {% else %}
-                    {{ current_user.Fname[0].upper() }}
+                    <div class="user-icon">{{ current_user.Fname[0].upper() }}</div>
                 {% endif %}
             </div>
             <div class="profile-text">
