--- a/flask/app/templates/adminlist.html
+++ b/flask/app/templates/adminlist.html
@@ -68,6 +68,12 @@
             </div>
         </div>
     </div>
+
+    <div class="pending-admin">
+        <a href="{{ url_for('pending_user')}}">
+            <span>Pending Admin</span>
+        </a>
+    </div>
 </body>
 </body>
 </html>
