--- a/flask/app/static/css/home.css
+++ b/flask/app/static/css/home.css
@@ -94,7 +94,7 @@ svg {
 .profile-img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* ให้รูปครอบพอดี */
+  object-fit: cover; 
 }
 
 .user-icon {
