--- a/flask/app/static/css/adminlist.css
+++ b/flask/app/static/css/adminlist.css
@@ -234,15 +234,6 @@ input:checked + .slider:before {
     gap: 10px;
 }
 
-.avatar {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-    color: var(--text--color);
-    background: var(--basebg--color);
-}
-
 .name {
     font-size: 15px;
     font-weight: 500;
@@ -252,4 +243,74 @@ input:checked + .slider:before {
 .username {
     font-size: 13px;
     color: var(--admin-username-color);
+}
+
+.user-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: var(--buttonbg--color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.9rem;
+  color: #f5f5f5;
+  font-weight: bold;
+}
+
+.profile-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* ให้รูปครอบพอดี */
+}
+
+.profile-circle {
+  align-items: center;
+  background-color: var(--base--color);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display :flex;
+  flex-shrink: 0;
+  height: 3rem;
+  justify-content: center;
+  width: 3rem;
+}
+
+.modal {
+  display: none; /* เริ่มต้นซ่อน */
+  position: fixed;
+  z-index: 1000;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  justify-content: center;
+  align-items: center;
+}
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 400px;
+  text-align: center;
+}
+.modal-buttons button {
+  margin: 10px;
+  padding: 8px 16px;
+  cursor: pointer;
+}
+
+.pending-admin{
+    padding: 10px 20px;
+    background: #2196F3;
+    border-radius: 20px;
+    width: 30%;
+    margin-left: 20px;
+    justify-content: center;
+    text-align: center;
+}
+
+.pending-admin span{
+    color: var(--text--color);
+    font-size: 1rem;
 }
