--- a/flask/app/static/css/home.css
+++ b/flask/app/static/css/home.css
@@ -80,14 +80,34 @@ svg {
 }
 
 .profile-circle {
-  align-items: center;
   background-color: var(--base--color);
   border-radius: 50%;
-  display: flex;
   flex-shrink: 0;
-  height: 3rem;
-  justify-content: center;
   width: 3rem;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden; /* สำคัญ! ให้รูปตัดตามวงกลม */
+}
+
+.profile-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
+
+.user-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: var(--buttonbg--color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.9rem;
+  color: #f5f5f5;
+  font-weight: bold;
 }
 
 .profile {
