--- a/flask/app/static/css/adminlist.css
+++ b/flask/app/static/css/adminlist.css
@@ -25,7 +25,7 @@ body {
 }
 
 .mainbox {
-    max-width: 400px;
+   
     margin: 40px auto;
     padding: 16px;
 }
@@ -305,9 +305,10 @@ input:checked + .slider:before {
     background: #2196F3;
     border-radius: 20px;
     width: 30%;
-    margin-left: 20px;
+    margin: 20px;
     justify-content: center;
     text-align: center;
+    text-decoration: none;
 }
 
 .pending-admin span{
