--- a/flask/app/templates/adminlist.html
+++ b/flask/app/templates/adminlist.html
@@ -19,7 +19,7 @@
     </script>
     <div class="header">
         <a href="{{ url_for('homepage') }}" class="back-btn">
-            <span class="material-icons">arrow_back</span>
+            <span class="material-icons">arrow_back_ios</span>
         </a>
         <h2>Admin List</h2>
     </div>
