--- a/flask/app/static/css/pendingadmin.css
+++ b/flask/app/static/css/pendingadmin.css
@@ -26,17 +26,18 @@ body {
 }
 
 .mainbox {
-   
-    margin: 40px auto;
+    margin: 20px auto;
     padding: 16px;
 }
+
+
 
 h2 {
     text-align: center;
     margin-bottom: 20px;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 600;
-    color: #333;
+    color: var(--text--color);
 }
 
 ul {
@@ -51,8 +52,8 @@ li {
     align-items: center;
     padding: 12px 0;
     border-bottom: 1px solid #eee;
-    font-size: 15px;
-    color: #333;
+    font-size: 1.25rem;
+    color: var(--text--color);
 }
 
 form {
@@ -315,4 +316,35 @@ input:checked + .slider:before {
 .pending-admin span{
     color: var(--text--color);
     font-size: 1rem;
+}
+
+.top-bar{
+    display: flex;
+    align-items: center;
+    padding: 16px;
+    border-bottom: 1px solid var(--border--color);
+    background-color: var(--base--color);
+    position: sticky;
+    top: 0;
+}
+
+.top-bar svg{
+    color: var(--text--color);
+    fill: var(--text--color);
+}
+
+.top-bar span{
+    color: var(--text--color);
+    font-size: 1.5rem;
+}
+
+.center{
+    flex: 1;
+    text-align: center;
+    margin: 0;
+}
+
+.center span{
+    font-weight: 600;
+    color: var(--text--color);
 }
