--- a/flask/app/templates/signup.html
+++ b/flask/app/templates/signup.html
@@ -24,16 +24,16 @@
         </div>
         <form class="text" method="post">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-            <p>or<br><br>login with username and password</p>
+            <p>or<br><br>login with email and password</p>
             <div class>
-                <label for="username">Username:</label>
-                <input type="text" id="username" placeholder="ExampleUsername101" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Example@exmpmail.com" required>
             </div>
             <div>
                 <label for="password">Password:</label>
-                <input type="password" id="password" placeholder="Your Password Here" required>
+                <input type="password" id="password" name="password" placeholder="Your Password Here" required>
             </div>
-            <input type="submit" value="login">
+            <button type="submit">Login</button>
         </form>
         <div class="text">
             <hr>
