--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/home.css">
+    <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='ico/stock_logo.png') }}">
     <script type="text/javascript" src="../templates/js/darkmode.js" defer></script>
     <title>Home page</title>
 </head>
@@ -119,7 +121,16 @@
             {% endif %}
         </div>
     </div>
-    <script src="../templates/js/language.js"></script>    
+    <script src="../templates/js/language.js"></script>   
+
+    <!-- pwa service-worker js -->
+    <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("{{ url_for('static', filename='service-worker.js') }}")
+        .then(reg => console.log("Service Worker registered", reg))
+        .catch(err => console.error("SW registration failed", err));
+        }
+    </script>
     
 </body>
 </html>
