--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -21,7 +21,7 @@
     </script>
 	<div class="top-bar">
     	<div class="back">
-        	<a href="{{ url_for('stockmenu') }}">
+        	<a href="{{ url_for('homepage') }}">
                 <span class="material-icons">arrow_back_ios_new</span> 
             </a>
     	</div>
