--- a/flask/app/templates/newitem.html
+++ b/flask/app/templates/newitem.html
@@ -8,55 +8,67 @@
   <link rel="stylesheet" href="../static/css/newitem.css">
 </head>
 
-<body>
+<body class="th">
+    <script>
+        const darkmode = localStorage.getItem('darkmode');
+        if(darkmode === 'active') {
+          document.body.classList.add('darkmode');
+        } else {
+          document.body.classList.remove('darkmode');
+        }
+    </script>
     <div class="header">
         <a href="{{ url_for('homepage') }}" class="back-btn">
             <span class="material-icons">arrow_back</span>
         </a>
         <h2>New item</h2>
     </div>
-
-    <div class="mainbox">
+    <div class="center">
+      <div class="mainbox">
         <form method="post" action="{{ url_for('newitem') }}" enctype="multipart/form-data">
-        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
 
-        <div class="upload-box">
-        <label for="img-file" class="upload-label">
-            <img src="../static/ico/default_image.png" id="preview-img">
-            <span>Add Photo</span>
-        </label>
-        <input type="file" name="file" accept="image/*" id="img-file" hidden required>
-        </div>
-       <div>
+          <div class="upload-box">
+          <label for="img-file" class="upload-label">
+              <img src="../static/ico/default_image.png" id="preview-img">
+              <span>Add Photo</span>
+          </label>
+          <input type="file" name="file" accept="image/*" id="img-file" hidden required>
+          </div>
+          <div class="center input-area">
             <label class="form-label">Item Name</label>
             <input type="text" class="input-box" name="getname" placeholder="Enter item name" required>
 
             <label class="form-label">Category</label>
             <div class="dropdown">
-                <input class="input-box" type="text" id="searchBox" placeholder="Select category"
-                onkeyup="filterFunction()" onclick="toggleList()" name="getcate">
-                <div id="dropdownList" class="dropdown-list">
-                {% for cate in category_list %}
-                <div onclick="selectItem('{{ cate.cateName }}')">{{ cate.cateName }}</div>
-                {% endfor %}
-                </div>
-
+              <input class="input-box" type="text" id="searchBox" placeholder="Select category"
+              onkeyup="filterFunction()" onclick="toggleList()" name="getcate">
+              <div id="dropdownList" class="dropdown-list">
+              {% for cate in category_list %}
+              <div onclick="selectItem('{{ cate.cateName }}')">{{ cate.cateName }}</div>
+              {% endfor %}
+              </div>
+            </div>
             <div class="row-2">
-                <div>
-                    <label class="form-label">Item Amount</label>
-                    <input type="number" class="input-box-row2" name="getamount" value="1" min="1" required>
+              <div class="center">
+                <label class="form-label">Item Amount</label>
+                <input type="number" class="input-box-row2" name="getamount" value="1" min="1" required>
+              </div>
+              <div class="center">
+                <label class="form-label">Item Minimum</label>
+                <div class="center">
+                  <input type="number" class="input-box-row2" name="getmin" value="1" min="1" required>
                 </div>
-                <div>
-                    <label class="form-label">Item Minimum</label>
-                    <input type="number" class="input-box-row2" name="getmin" value="1" min="1" required>
-                </div>
+              </div>
             </div>
 
             <label class="form-label">Item Description</label>
             <textarea class="input-box" rows="3" name="getdes" placeholder="Enter item description"></textarea>
-        </div>
-        <button class="add-btn" name="submit" value="confirm">Add Item</button>
-    </form>
+          </div>
+          <button class="add-btn" name="submit" value="confirm">Add Item</button>
+        </form>
+      </div>
+    </div>
   </div>
 
   <script>
